--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ h1 {
     margin-right: 15px;
     transform: scale(1.2);
 }
-.item.completed {
+.item-name.completed {
     text-decoration: line-through;
     color: #888;
 }
@@ -62,4 +62,14 @@ h1 {
     color: #888;
     font-style: italic;
     padding: 40px 0;
+}
+.delete-item {
+    margin-left: auto;
+    background-color: #0056b3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    text-decoration: none !important;
 }
